--- a/Twitter/index.html
+++ b/Twitter/index.html
@@ -12,22 +12,22 @@
 		</div>
 		<nav>
 			<ul>
-				<li id="Seleccionado"><img src="Imagenes/Home.png"><div class="TextoMenuA">Home</div></li>
+				<li id="Seleccionado"><img src="Imagenes/Home.png"><div class="TextoMenuA">Inicio</div></li>
 				<li><img src="Imagenes/Explore.png"><div class="TextoMenuA">Explore</div></li>
-				<li><img src="Imagenes/Notifications.png"><div class="TextoMenuA">Notifications</div></li>
-				<li><img src="Imagenes/Messages.png"><div class="TextoMenuA">Messages</div></li>
-				<li><img src="Imagenes/Bookmarks.png"><div class="TextoMenuA">Bookmarks</div></li>
-				<li><img src="Imagenes/Lists.png"><div class="TextoMenuA">Lists</div></li>
-				<li><img src="Imagenes/Borreload.png"><div class="TextoMenuA">Profile</div></li>
-				<li><img src="Imagenes/More.png"><div class="TextoMenuA">More</div></li>
-				<li id="Tweet">Tweet</li>
+				<li><img src="Imagenes/Notifications.png"><div class="TextoMenuA">Notificaciones</div></li>
+				<li><img src="Imagenes/Messages.png"><div class="TextoMenuA">Mensajes</div></li>
+				<li><img src="Imagenes/Bookmarks.png"><div class="TextoMenuA">Tienda</div></li>
+				<li><img src="Imagenes/Lists.png"><div class="TextoMenuA">Grupos</div></li>
+				<li><img src="Imagenes/Borreload.png"><div class="TextoMenuA">Perfil</div></li>
+				<li><img src="Imagenes/More.png"><div class="TextoMenuA">Mas</div></li>
+				<li id="Tweet">Twiit</li>
 			</ul>
 		</nav>
 	</div>
 	<div id="CuadroB">
 		<div id="CuadroEstados">
 			<div id="Texto">
-				<p>Home</p>
+				<p>Inicio</p>
 			</div>
 			<div id="Icono">
 				<img src="Imagenes/Stars.png">
@@ -38,7 +38,7 @@
 				<img src="Imagenes/Borreload.png">
 			</div>
 			<div id="WH">
-				<h4><p>What's happening?</p></h4>
+				<h4><p>Que hongo?</p></h4>
 			</div>
 			<div class="Iconos">
 				<img src="Imagenes/Image.png">
@@ -53,7 +53,7 @@
 				<img src="Imagenes/Smile.png">
 			</div>
 			<div id="TweetPequeño">
-				<p>Tweet</p>
+				<p>publi</p>
 			</div>
 		</div>
 		<div id="CuadroNoticias">
@@ -62,13 +62,13 @@
 					<img src="Imagenes/Zeroboros.jpg">
 				</div>
 				<div class="NombreP">
-					<p>Zeroboros456</p>
+					<p>ElPeje</p>
 				</div>
 				<div class="User">
-					<p>@Z3r0b0r0s - 5min</p>
+					<p>@ElPeje</p>
 				</div>
 				<div class="Texto">
-						<p>Konami sacando producto tras producto, y uno sin dinero :'v . #PuraHumildad</p>
+						<p>La noche es el momento perfecto para hablar con nosotros, puedes reir, llorar, enojarte y nadie pensara mal de ti porque estarán igual, a no ser que sean perfectamente normales.</p>
 				</div>
 				<div id="IconosFull">
 					<div class="IconosPub">
@@ -90,13 +90,13 @@
 					<img src="Imagenes/Raiden.jpg">
 				</div>
 				<div class="NombreP">
-					<p>Raiden</p>
+					<p>LuisAlfredo</p>
 				</div>
 				<div class="User">
-					<p>@RaidenTheLightSworn - 10min</p>
+					<p>@LuisALfredo</p>
 				</div>
 				<div class="Texto">
-					<p>Yo, recordando que hoy teniamos que terminar la página de Twitter y no llevo nada</p>
+					<p>Me siento terrible.</p>
 						<div id="ImagePubB">
 							<img src="Imagenes/No.jpg">
 						</div>
@@ -121,13 +121,13 @@
 					<img src="Imagenes/DM.jpg">
 				</div>
 				<div class="NombreP">
-					<p>Dark Magician</p>
+					<p>ElLazza</p>
 				</div>
 				<div class="User">
-					<p>@D4M4G2500 - 20min</p>
+					<p>@ElLazza</p>
 				</div>
 				<div id="TextoC">
-					<p>A la espera de nuevo soporte. Estén atentos a las noticias...</p>
+					<p>Bitcoin una genialidad</p>
 				</div>
 				<div id="IconosFull">
 					<div class="IconosPub">
